Add debug module

--- a/_cloud-native-workshop-codeready.yml
+++ b/_cloud-native-workshop-codeready.yml
@@ -35,6 +35,7 @@ modules:
   - catalog-spring-boot-codeready
   - gateway-vertx-codeready
   - webui-deployment
+  - debug-codeready
   - app-config-thorntail
   - health
   - fault-tolerance-codeready
